# Pakki-Engine

./: .gitattributes  .gitignore  Header.h  README.md  Source.cpp  todo.txt
GLproject/: GLpractise.sln  Header.h  Source.cpp
GLproject/GLpractise/: CMakeLists.txt  ClassDiagram.cd  FRAG_SHA.txt  GLpractise.vcxproj  GLpractise.vcxproj.filters  Header.h  Source.cpp  VERT_SHA.txt  freetype.cpp  freetype.h  glad.c  instafrag.txt  instavert.txt  main.cpp  objectManager.cpp  pakki.lua  physics.cpp  physics.h
GLproject/GLpractise/includes/glad/: glad.h
GLproject/GLpractise/libs-rel/: FRAG_SHA.txt  VERT_SHA.txt  freetype281d.lib  lua51.lib
include/: InputManager.h  InstancedRenderer.h  Vertex.h  arrayD.h  camera.h  debugrendering.h  dybamic_array.h  engine.h  entities.h  filesystem.h  freetype.h  memsebug.h  objectManager.h  pakki.h  pakki_utilities.h  perlinnoice.h  physics.h  projectDefinitions.h  shader.h  soundsystem.h  spritebatch.h  spritecache.h  stb_image.h  stb_perlin.h  texture.h
include/fmod/lowlevel/lib/linux/arm/: libfmod.so.10.1  libfmodL.so.10.1
include/fmod/lowlevel/lib/linux/armhf/: libfmod.so.10.1  libfmodL.so.10  libfmodL.so.10.1
native-activity/app/: build.gradle
native-activity/app/src/main/: AndroidManifest.xml
native-activity/app/src/main/assets/: FRAG_SHA.txt  VERT_SHA.txt
native-activity/app/src/main/cpp/: CMakeLists.txt  main.cpp
native-activity/app/src/main/java/com/android/: MainActivity.java
native-activity/gradle/wrapper/: gradle-wrapper.properties
src/: InputManager.cpp  InstancedRenderer.cpp  camera.cpp  debugrendering.cpp  engine.cpp  entities.cpp  filesystem.cpp  freetype.cpp  memdebug.cpp  objectManager.cpp  pakki.cpp  pakki_utilities.cpp  perlinnoice.cpp  physics.cpp  shader.cpp  soundsystem.cpp  spritebatch.cpp  window.cpp
